# harmonia

./: .dockerignore  .env.example  .gitignore  BUILD.md  Cargo.toml  DOCS_INDEX.md  Dockerfile.api  Dockerfile.workers  FILE_INVENTORY.md  IMPLEMENTATION_STATUS.md  Makefile  PHASE4_AUTH_SECURITY.md  PHASE4_STATUS.md  PROGRESS.md  PROJECT_STATUS_PHASE4_COMPLETE.md  QUICKSTART.md  README.md  ROADMAP_PHASES5-10.md  deny.toml  docker-compose.host.yml  docker-compose.yml
.clinerules/general/: debug.instructions.md  security-github.instructions.md  syntaxhunter.instructions.md  text-hygiene.instructions.md
.clinerules/rust/: crossplatform-instructions.md  linthunter.instructions.md  pest.instructions.md  ron.instructions.md  rust.instructions.md
.clinerules/rust/multi-agent/: index.instructions.md  linthunter.instructions.md  pestmate.instructions.md  ron-guide.instructions.md  rust-core.instructions.md
crates/api/: Cargo.toml
crates/api/src/: app.rs  config.rs  crypto.rs  dto.rs  error.rs  extractors.rs  jwt.rs  lib.rs  main.rs  middleware.rs  state.rs
crates/api/src/handlers/: admin.rs  auth.rs  health.rs  mod.rs  oauth.rs  queue.rs  websocket.rs
crates/api/src/routes/: auth.rs  health.rs  mod.rs  playback.rs  queue.rs
crates/api/tests/: auth_crypto.rs  handlers.rs  spotify_oauth.rs
crates/application/: Cargo.toml
crates/application/src/: lib.rs  locks.rs
crates/application/src/services/: mod.rs  playback.rs  queue.rs
crates/bots-slack/: Cargo.toml
crates/bots-slack/src/: lib.rs  main.rs
crates/bots-telegram/: Cargo.toml
crates/bots-telegram/src/: lib.rs  main.rs
crates/db/: Cargo.toml
crates/db/migration/: Cargo.toml
crates/db/migration/src/: lib.rs  m20240416_000001_create_users.rs  m20240416_000002_create_rooms.rs  m20240416_000003_create_provider_accounts.rs  m20240416_000004_create_room_mappings.rs  m20240416_000005_create_queue_items.rs  m20240416_000006_create_votes.rs
crates/db/src/: lib.rs  m20220101_000001_create_table_users.rs  m20220101_000002_create_table_rooms.rs  m20220101_000003_create_table_provider_accounts.rs  m20220101_000004_create_table_queue_items.rs  m20220101_000005_create_table_votes.rs  m20220101_000006_create_table_settings.rs  main.rs
crates/db/src/repository/: mod.rs
crates/domain/: Cargo.toml
crates/domain/src/: error.rs  lib.rs  models.rs  rules.rs  traits.rs
crates/domain/src/entities/: mod.rs
crates/domain/src/errors/: mod.rs
crates/domain/src/rules/: mod.rs  voting.rs
crates/domain/src/traits/: mod.rs
crates/domain/tests/: entities.rs  priority_and_voting.rs  voting_logic.rs
crates/entities/: Cargo.toml
crates/entities/src/: lib.rs  provider_accounts.rs  queue_items.rs  rooms.rs  settings.rs  users.rs  votes.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: lib.rs  lock_manager.rs  providers.rs  queue_engine.rs  redis.rs  repository.rs  security.rs  websocket.rs
crates/infrastructure/src/providers/: mod.rs  spotify.rs  youtube.rs
crates/infrastructure/tests/: spotify.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs  test_utils.rs  validation.rs
crates/workers/: Cargo.toml
crates/workers/src/: config.rs  context.rs  lib.rs  main.rs  queue_engine.rs  redis_service.rs
crates/workers/src/workers/: playback.rs  queue.rs
crates/workers/tests/: queue_integration.rs
docs/: openapi.json
