[workspace]
members = [
    "crates/domain",
    "crates/entities",
    "crates/db",
    "crates/api",
    "crates/workers",
    "crates/infrastructure",
    "crates/shared",
    "crates/bots-telegram",
    "crates/bots-slack",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Music Platform Team"]

[workspace.dependencies]
# Core
tokio = { version = "1.35", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
async-trait = "0.1"
thiserror = "1.0"
anyhow = "1.0"

# Database
sea-orm = { version = "0.12", features = ["runtime-tokio-native-tls", "sqlx-postgres"] }
sea-orm-migration = { version = "0.12", features = ["runtime-tokio-native-tls"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid"] }

# Redis
redis = { version = "0.24", features = ["aio", "tokio-comp", "connection-manager"] }

# Crypto
aes-gcm = "0.10"
base64 = "0.21"
hex = "0.4"
rand = "0.8"

# JWT
jsonwebtoken = "9.2"

# HTTP Client
reqwest = { version = "0.11", features = ["json"] }
http = "1.0"
urlencoding = "2.1"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Serialization
chrono = { version = "0.4", features = ["serde"] }

# Testing
mockall = "0.12"
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
