[workspace]
members = [
    "crates/domain",
    "crates/entities",
    "crates/db",
    "crates/api",
    "crates/workers",
    "crates/infrastructure",
    "crates/shared",
    "crates/bots-telegram",
    "crates/bots-slack",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Music Platform Team"]

[workspace.dependencies]
# Core
tokio = { version = "1.35", features = ["full"] }
axum = { version = "0.8.9", features = ["ws"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
async-trait = "0.1"
thiserror = "2.0.18"
anyhow = "1.0"

# Database
sea-orm = { version = "0.12", features = ["runtime-tokio-native-tls", "sqlx-postgres"] }
sea-orm-migration = { version = "0.12", features = ["runtime-tokio-native-tls"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid"] }

# Redis
redis = { version = "0.24", features = ["aio", "tokio-comp", "connection-manager"] }

# Crypto
aes-gcm = "0.10"
base64 = "0.22.1"
hex = "0.4"
rand = "0.10.1"

# JWT
jsonwebtoken = "10.3.0"

# HTTP Client
reqwest = { version = "0.13.2", features = ["json"] }
http = "1.4.0"
urlencoding = "2.1"
tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.6.8", features = ["trace", "cors"] }

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Serialization
chrono = { version = "0.4", features = ["serde"] }

# Testing
mockall = "0.14.0"
tokio-test = "0.4"
futures-util = "0.3"

[profile.release]
opt-level = 3
lto = true
