[package]
name = "api"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
axum = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors", "trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
domain = { workspace = true }
infrastructure = { workspace = true }
db = { workspace = true }
shared = { workspace = true }
base64 = { workspace = true }
sea-orm = { workspace = true }

[dev-dependencies]
