[package]
name = "bots-slack"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
application = { workspace = true }
domain = { workspace = true }
infrastructure = { workspace = true }
db = { workspace = true }
shared = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
sea-orm = { workspace = true }

[dev-dependencies]