[package]
name = "bots-telegram"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
domain = { path = "../domain" }
shared = { path = "../shared" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
