[package]
name = "db"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
domain = { path = "../domain" }
entities = { path = "../entities" }
shared = { path = "../shared" }
sea-orm = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
aes-gcm = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
