[package]
name = "db"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "db"
path = "src/main.rs"

[dependencies]
domain = { workspace = true }
entities = { workspace = true }
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }