[package]
name = "infrastructure"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
domain = { workspace = true }
entities = { workspace = true }
shared = { workspace = true }
redis = { workspace = true }
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true }
sea-orm = { workspace = true }
jsonwebtoken = { workspace = true }
aes-gcm = { workspace = true }
base64 = { workspace = true }
reqwest = { workspace = true }
futures-util = { workspace = true }
chrono = { workspace = true }
axum = { workspace = true }
