[package]
name = "workers"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
domain = { path = "../domain" }
entities = { path = "../entities" }
db = { path = "../db" }
shared = { path = "../shared" }
infrastructure = { path = "../infrastructure" }
tokio = { workspace = true }
redis = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
