[package]
name = "workers"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
tokio = { workspace = true, features = ["full"] }
domain = { workspace = true }
db = { workspace = true }
infrastructure = { workspace = true }
shared = { workspace = true }
tracing = { workspace = true }